test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u64_add_overflow/src/main.sw
script;

fn main() -> bool {
    let a: u64 = u64::max();
    let b: u64 = 1;

    let result: u64 = a + b;
    log(result);

    true
}
